# GTS_Plugin-1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  animation_triggers.txt  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: XSEPlugin.cmake
contrib/Distribution/: GTS.esp
contrib/Distribution/Config/: GtsInput.toml  GtsPlugin.toml  GtsRuntime.toml  Runtime.toml
contrib/Distribution/Papyrus/: GtsPlugin.pex
contrib/Distribution/PapyrusSource/: GTSControl.psc  GTSEvent.psc  GTSHeight.psc  GTSPlugin.psc  GTSScale.psc  GtsPlugin.psc
contrib/Distribution/esps/: GTS_mag_effects.esp
docs/: AnimationTriggers.md  Settings.md
src/: ActionSettings.hpp  Config.cpp  Config.hpp  Constants.hpp  PCH.hpp  Version.hpp  XSEPlugin.cpp  events.hpp  node.cpp  profiler.cpp  skselog.hpp  spring.hpp  xSEPlugin.cpp
src/API/: Racemenu.cpp  Racemenu.hpp  SmoothCam.cpp  SmoothCam.hpp
src/API/Impl/: SKEEBodyMorphInterface.hpp
src/Colliders/: Actor.cpp  Actor.hpp  CharController.cpp  CharController.hpp  Common.cpp  Common.hpp  Ragdoll.cpp  Ragdoll.hpp
src/Colliders/RE/: AllRayCollector.cpp  AllRayCollector.hpp  RE.cpp  RE.hpp
src/Config/: Config.cpp  Config.hpp  ConfigUtil.hpp  KeybindList.hpp  Keybinds.cpp  Keybinds.hpp  SettingsList.hpp
src/Data/: BasicRecord.hpp  CompressedRecord.hpp  Data.hpp  Persistent.cpp  Persistent.hpp  Plugin.cpp  Plugin.hpp  Runtime.cpp  Runtime.hpp  Tasks.hpp  Time.cpp  Time.hpp  Transient.cpp  Transient.hpp  World.cpp  World.hpp
src/Events/: Events.cpp  Events.hpp
src/Hooks/: Experiments.cpp  Experiments.hpp  Hooks.cpp  Hooks.hpp
src/Hooks/Detours/: Creatwth.cpp  Detours.cpp  Detver.hpp  DisASM.cpp  FunctionHook.cpp  FunctionHook.hpp  Image.cpp  Modules.cpp
src/Hooks/FuDGE/: BranchHook.hpp  CallHook.hpp
src/Hooks/Skyrim/: Actor.cpp  Actor.hpp  ActorEquipManager.cpp  ActorEquipManager.hpp  ActorRotation.cpp  ActorRotation.hpp  CameraState.cpp  CameraState.hpp  Character.cpp  Character.hpp  Console.cpp  Console.hpp  Controls.hpp  D3DPresent.cpp  D3DPresent.hpp  Damage.cpp  Damage.hpp  Detection.cpp  Detection.hpp  Havok.cpp  Havok.hpp  HeadTracking.cpp  HeadTracking.hpp  Headtracking_Graph.cpp  Impact.cpp  Impact.hpp  Input.cpp  Input.hpp  Jump.cpp  Jump.hpp  MagicTarget.cpp  Main.cpp  (+30 more)
src/Magic/: Magic.cpp  Magic.hpp
src/Managers/: AttackManager.cpp  AttackManager.hpp  Attributes.cpp  Attributes.hpp  Camera.cpp  Camera.hpp  Contact.cpp  Contact.hpp  CrushManager.cpp  CrushManager.hpp  Explosion.cpp  Explosion.hpp  GtsManager.cpp  GtsManager.hpp  GtsSizeManager.cpp  GtsSizeManager.hpp  HighHeel.cpp  HighHeel.hpp  HitManager.cpp  HitManager.hpp  Impact.cpp  Impact.hpp  Managers.hpp  MaxSizeManager.cpp  MaxSizeManager.hpp  ModEvent.cpp  ModEvent.hpp  OverkillManager.cpp  OverkillManager.hpp  RandomGrowth.cpp  RandomGrowth.hpp  Register.cpp  Register.hpp  Reloader.cpp  Reloader.hpp  RipClothManager.cpp  RipClothManager.hpp  Rumble.cpp  Rumble.hpp  ShrinkToNothingManager.cpp  (+5 more)
src/Papyrus/: Height.cpp  Height.hpp  ModEvents.cpp  ModEvents.hpp  Papyrus.cpp  Papyrus.hpp  Plugin.cpp  Plugin.hpp  Scale.cpp  Scale.hpp  TotalControl.cpp  TotalControl.hpp
src/Profiler/: Profiler.cpp  Profiler.hpp
src/Rays/: AllCollector.cpp  AllCollector.hpp  Raycast.cpp  Raycast.hpp
src/Scale/: Height.cpp  Height.hpp  ModScale.cpp  ModScale.hpp  Scale.cpp  Scale.hpp
src/UI/: DebugAPI.cpp  DebugAPI.hpp  UIManager.cpp  UIManager.hpp
src/Utils/: AV.cpp  AV.hpp  ActorBools.cpp  ActorBools.hpp  ActorUtils.cpp  ActorUtils.hpp  ButtCrushUtils.cpp  ButtCrushUtils.hpp  Camera.cpp  Camera.hpp  DeathReport.cpp  DeathReport.hpp  Debug.cpp  Debug.hpp  DifficultyUtils.cpp  DifficultyUtils.hpp  DynamicScale.cpp  DynamicScale.hpp  Enum.hpp  FindActor.cpp  FindActor.hpp  Fmt.hpp  InitUtils.hpp  InputConditions.hpp  InputFunctions.cpp  InputFunctions.hpp  ItemDistributor.cpp  ItemDistributor.hpp  KillDataUtils.cpp  KillDataUtils.hpp  Looting.cpp  Looting.hpp  MessageboxUtil.hpp  MovementForce.cpp  MovementForce.hpp  Node.cpp  Node.hpp  PapyrusUtils.hpp  QuestUtil.cpp  QuestUtil.hpp  (+18 more)
src/api/: APIManager.cpp  APIManager.hpp  RaceMenuFunctions.hpp  Racemenu.cpp  Racemenu.hpp  SmoothCamAPI.hpp
src/colliders/: allraycollector.cpp  common.cpp
src/data/: persistent.cpp  persistent.hpp  plugin.cpp  plugin.hpp  runtime.cpp  runtime.hpp  tasks.hpp  time.cpp  time.hpp  transient.cpp  transient.hpp
src/hooks/: ActorEquipManager.cpp  ActorEquipManager.hpp  Experiments.cpp  Input.cpp  Input.hpp  Movement.cpp  PreventAnimations.cpp  Projectiles.cpp  Pushback.cpp  RaceMenu.cpp  Stealth.cpp  actor.cpp  actorRotation.cpp  character.cpp  controls.hpp  damage.cpp  havok.cpp  headTracking.cpp  hkbBehaviorGraph.cpp  hooks.cpp  impact.cpp  jump.cpp  main.cpp  playerCamera.cpp  playerCharacter.cpp  sink.cpp  tesCamera.cpp
src/magic/: magic.cpp  magic.hpp
src/managers/: AttackManager.cpp  AttackManager.hpp  Attributes.cpp  Attributes.hpp  CrushManager.cpp  GrabAnimationController.cpp  GrabAnimationController.hpp  GtsManager.cpp  GtsManager.hpp  GtsSizeManager.cpp  GtsSizeManager.hpp  InputManager.cpp  InputManager.hpp  MaxSizeManager.cpp  OverkillManager.cpp  PerkHandler.cpp  PerkHandler.hpp  RandomGrowth.cpp  RipClothManager.cpp  RipClothManager.hpp  Rumble.cpp  Rumble.hpp  ShrinkToNothingManager.cpp  ShrinkToNothingManager.hpp  ThighSandwichController.cpp  ThighSandwichController.hpp  camera.cpp  camera.hpp  explosion.cpp  highheel.cpp  highheel.hpp  hitmanager.cpp  hitmanager.hpp  impact.cpp  register.cpp  tremor.cpp  vore.cpp  vore.hpp
src/papyrus/: plugin.cpp  scale.cpp  totalcontrol.cpp
src/rays/: allcollector.cpp  raycast.cpp  raycast.hpp
src/scale/: height.cpp  modscale.cpp  scale.cpp
src/utils/: DeathReport.cpp  DifficultyUtils.cpp  DynamicScale.cpp  InputConditions.hpp  InputFunctions.cpp  MovementForce.cpp  SurvivalMode.cpp  actorBools.cpp  actorBools.hpp  actorUtils.cpp  actorUtils.hpp  av.cpp  camera.cpp  camera.hpp  dinput.hpp  fmt.hpp  looting.cpp  random.hpp  smooth.cpp  units.cpp  voreUtils.cpp  voreUtils.hpp
(+455 files in other folders)
